--- a/index.html
+++ b/index.html
@@ -1,46 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thông Tin Thời Tiết</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Giao diện tương tự</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Thông Tin Thời Tiết</h1>
+        <h1>PAS VN</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Giới thiệu</a></li>
+                <li><a href="#">Sản phẩm</a></li>
+                <li><a href="#">Giải pháp</a></li>
+                <li><a href="#">Liên hệ</a></li>
+            </ul>
+        </nav>
     </header>
-    <nav>
-        <ul>
-            <li><a href="#muc-tieu">Mục tiêu</a></li>
-            <li><a href="#yeu-cau">Yêu cầu</a></li>
-            <li><a href="#thanh-vien">Thành viên nhóm</a></li>
-        </ul>
-    </nav>
-    <main>
-        <section id="muc-tieu">
-            <h2>Mục tiêu</h2>
-            <p>Mô tả mục tiêu của dự án...</p>
-        </section>
-        <section id="yeu-cau">
-            <h2>Yêu cầu</h2>
-            <p>Mô tả các yêu cầu cần đạt được...</p>
-        </section>
-        <section id="thanh-vien">
-            <h2>Thành viên nhóm</h2>
-            <p>Danh sách thành viên trong nhóm...</p>
-        </section>
-        <section id="thoi-tiet">
-            <h2>Thông Tin Thời Tiết</h2>
-            <div class="weather-info">
-                <p>🌡️ Nhiệt độ: <span id="temperature">--</span> °C</p>
-                <p>💧 Độ ẩm: <span id="humidity">--</span> %</p>
-            </div>
-        </section>
-    </main>
+
+    <section>
+        <h2>Trí tuệ Việt</h2>
+        <p>Tiên phong kiến tạo giải pháp tự động hóa sản xuất</p>
+    </section>
+
     <footer>
-        <p>&copy; 2024 Nhóm của bạn</p>
-    </footer>
+        </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
