--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Giao diện tương tự</title>
+    <title>Hiển Thị Thông Tin</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>PAS VN</h1>
+        <h1>NHÓM 20</h1>
         <nav>
             <ul>
                 <li><a href="#">Giới thiệu</a></li>
-                <li><a href="#">Sản phẩm</a></li>
+                <li><a href="#">Yêu cầu</a></li>
                 <li><a href="#">Giải pháp</a></li>
                 <li><a href="#">Liên hệ</a></li>
             </ul>
@@ -18,12 +18,19 @@
     </header>
 
     <section>
-        <h2>Trí tuệ Việt</h2>
+        <h2>HIỂN THỊ THÔNG TIN THỜI TIẾT RA BẢNG LED</h2>
         <p>Tiên phong kiến tạo giải pháp tự động hóa sản xuất</p>
     </section>
 
+    <section id="gioiThieu" style="display: none;">
+        <h2>Giới thiệu</h2>
+        <p>Chào mừng bạn đến với nhóm 20! Đây là nơi chúng tôi chia sẻ các giải pháp tự động hóa sản xuất và ứng dụng IoT tiên tiến.</p>
+    </section>
+
     <footer>
-        </footer>
+	<p>Nhóm 20 - Lớp DH21TD</p>
+        <p>IOT và Ứng Dụng<p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
