--- a/gioithieu.html
+++ b/gioithieu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Giới Thiệu - Nhóm 20</title>
+    <title>GIỚI THIỆU - Nhóm 20</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,21 +11,23 @@
             <ul>
                 <li><a href="index.html">Trang chủ</a></li>
                 <li><a href="gioithieu.html">Giới thiệu</a></li>
-                <li><a href="#">Yêu cầu</a></li>
-                <li><a href="#">Giải pháp</a></li>
-                <li><a href="#">Liên hệ</a></li>
+                <li><a href="yeucau.html">Yêu cầu</a></li>
+                <li><a href="#">Mục tiêu</a></li>
+                <li><a href="lienhe.html">Liên hệ</a></li>
             </ul>
         </nav>
     </header>
 
     <section>
         <h2>Giới thiệu</h2>
-        <p>Chào mừng bạn đến với nhóm 20! Đây là nơi chúng tôi chia sẻ các giải pháp tự động hóa sản xuất và ứng dụng IoT tiên tiến.</p>
+        <p>Chào mừng thầy và các bạn đến với web của nhóm 20.</p>
+	<p>Đề tài của nhóm là thu thập dữ liệu thời tiết từ các cảm biến và hiển thị lên bảng LED.</p>
     </section>
+	
 
     <footer>
-	<p>Nhóm 20 - Lớp DH21TD</p>
-        <p>IOT và Ứng Dụng<p>
+	<p>© 2024 Nhóm 20 - Lớp DH21TD</p>
+        <p>Đồ án IOT và Ứng Dụng<p>
     </footer>
 </body>
 </html>
