--- a/yeucau.html
+++ b/yeucau.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hiển Thị Thông Tin</title>
+    <title>Yêu Cầu - Nhóm 20</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -9,8 +9,9 @@
         <h1>NHÓM 20</h1>
         <nav>
             <ul>
+                <li><a href="index.html">Trang chủ</a></li>
                 <li><a href="gioithieu.html">Giới thiệu</a></li>
-                <li><a href="yeucau.html">Yêu cầu</a></li>
+                <li><a href="yeucau.html">Yêu cầu</a></li>>
                 <li><a href="#">Mục tiêu</a></li>
                 <li><a href="lienhe.html">Liên hệ</a></li>
             </ul>
@@ -18,19 +19,15 @@
     </header>
 
     <section>
-        <h2>HIỂN THỊ THÔNG TIN THỜI TIẾT RA BẢNG LED</h2>
-           </section>
-
-    <section id="gioiThieu" style="display: none;">
-        <h2>Giới thiệu</h2>
-        <p>Chào mừng thầy và các bạn đến với web đề tài của nhóm 20.</p>
+        <h2>YÊU CẦU</h2>
+        <p>Mô hình yêu cầu sử dụng các cảm biến như dht11, cảm biến ánh sáng, hướng gió, thu thập các số liệu và hiển thị Lên bảng LED.</p>
+	<p>Sử dụng ESP32 truyền thông dữ liệu lên web server.</p>
     </section>
 
     <footer>
 	<p>© 2024 Nhóm 20 - Lớp DH21TD</p>
         <p>Đồ án IOT và Ứng Dụng<p>
-    </footer>
 
-    <script src="script.js"></script>
+    </footer>
 </body>
 </html>
