--- a/lienhe.html
+++ b/lienhe.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hiển Thị Thông Tin</title>
+    <title>Liên Hệ - Nhóm 20</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -9,6 +9,7 @@
         <h1>NHÓM 20</h1>
         <nav>
             <ul>
+                <li><a href="index.html">Trang chủ</a></li>
                 <li><a href="gioithieu.html">Giới thiệu</a></li>
                 <li><a href="yeucau.html">Yêu cầu</a></li>
                 <li><a href="#">Mục tiêu</a></li>
@@ -18,19 +19,17 @@
     </header>
 
     <section>
-        <h2>HIỂN THỊ THÔNG TIN THỜI TIẾT RA BẢNG LED</h2>
-           </section>
-
-    <section id="gioiThieu" style="display: none;">
-        <h2>Giới thiệu</h2>
-        <p>Chào mừng thầy và các bạn đến với web đề tài của nhóm 20.</p>
+        <h2>THÔNG TIN NHÓM</h2>
+        <p>NGUYỄN NGỌC TÂN - 21138174</p>
+	<p>BÙI QUANG TIẾN  - 21138184</p>
     </section>
-
+	<!-- Thêm ảnh vào đây -->
+        <img src="images/ANH2.jpg" alt="" style="max-width: 50%; height: auto; margin-top: 20px;">
+    </section>
     <footer>
 	<p>© 2024 Nhóm 20 - Lớp DH21TD</p>
         <p>Đồ án IOT và Ứng Dụng<p>
-    </footer>
 
-    <script src="script.js"></script>
+    </footer>
 </body>
 </html>
