--- a/yeucau.html
+++ b/yeucau.html
@@ -11,7 +11,7 @@
             <ul>
                 <li><a href="index.html">Trang chủ</a></li>
                 <li><a href="gioithieu.html">Giới thiệu</a></li>
-                <li><a href="yeucau.html">Yêu cầu</a></li>>
+                <li><a href="yeucau.html">Yêu cầu</a></li>
                 <li><a href="#">Mục tiêu</a></li>
                 <li><a href="lienhe.html">Liên hệ</a></li>
             </ul>
