--- a/xla.html
+++ b/xla.html
@@ -14,7 +14,7 @@
         html, body {
             height: 100%;
             font-family: 'Poppins', sans-serif;
-            background: url('https://th.bing.com/th/id/OIP.3XG0UEeBSGNEsBhvzXuxGgHaEK?rs=1&pid=ImgDetMain')
+            background: url('https://visitvinhphuc.com/DataFiles/2024/01/Blog/20240108-104201-eFmbkjIz.webp')
     no-repeat center center fixed;
             background-size: cover;
             color: #333;
