--- a/xla.html
+++ b/xla.html
@@ -297,6 +297,16 @@
             };
             img.src = URL.createObjectURL(event.target.files[0]);
         }
+        function deleteImage() {
+    const canvas = document.getElementById('canvas');
+    const ctx = canvas.getContext('2d');
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+    canvas.width = 0;
+    canvas.height = 0;
+    document.getElementById('upload').value = ""; // Xóa file đã chọn
+}
+
+        
 
         function detectDisease() {
             alert("se đuoc them sau!");
