--- a/xla.html
+++ b/xla.html
@@ -142,6 +142,8 @@
             width: 100%;
             max-width: 250px;
         }
+        <button onclick="deleteImage()">🗑 Xóa ảnh</button>
+
 
         input {
             background: #444;
