--- a/hienthi.html
+++ b/hienthi.html
@@ -313,14 +313,12 @@ function toggleMenu(side) {
                     <li>Xay dung he thong tu dong cham soc dua luoi trong nha mang</li>
                     <li>Ung dung xu ly anh de theo doi su phat trien cua cay</li>
                     <li>Phat hien som cac benh tren la de co bien phap xu ly kip thoi</li>
-                    <li>Dieu khien tuoi nuoc, bon phan tu dong theo lich trinh hoac theo dieu kien thuc te</li>
                 </ul>
             </td>
             <td>
                 <ul>
                     <li>Camera tren he thong rong roc: Chup anh cay tu nhieu goc do khac nhau</li>
-                    <li>Cam bien moi truong: Do do am dat, anh sang, nhiet do de dieu chinh dieu kien cham soc</li>
-                    <li>Bo xu ly trung tam (ESP32 ket hop voi may tinh AI): Xu ly hinh anh va dieu khien thiet bi</li>
+                    <li>Bo xu ly trung tam (Rasberry Pi ket hop voi may tinh AI): Xu ly hinh anh va dieu khien thiet bi</li>
                     <li>Web Control Panel: Cung cap giao dien de nguoi dung giam sat va dieu khien he thong</li>
                 </ul>
             </td>
@@ -337,14 +335,13 @@ function toggleMenu(side) {
             <td>
                 <ul>
                     <li>Giúp nong dan giam sat cay trong tu xa, tiet kiem thoi gian</li>
-                    <li>Tu dong hoa tuoi nuoc, bon phan, giup toi uu hoa nguon tai nguyen</li>
                     <li>Phat hien som benh tren cay, giam thieu rui ro dich benh lay lan</li>
                     <li>Phan tich du lieu sinh truong, giup toi uu hoa quy trinh canh tac</li>
                 </ul>
             </td>
             <td>
                 <ul>
-                    <li>Phan cung: Raspberry Pi / ESP32, Camera AI, Cam bien do am, nhiet do, anh sang</li>
+                    <li>Phan cung: Raspberry Pi /  Camera AI,Step motor, he thong truot</li>
                     <li>Phan mem: Python, OpenCV, TensorFlow/PyTorch, Web (Flask/Django + React/Vue)</li>
                     <li>Mang ket noi: Wi-Fi, MQTT de giao tiep giua cac thiet bi</li>
                 </ul>
