--- a/truycap.html
+++ b/truycap.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Truy cập thông tin</title>
+    <title>truy cap thong tin</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
         html, body {
             height: 100%;
             font-family: 'Poppins', sans-serif;
             background: url('https://th.bing.com/th/id/OIP.xfuyHhy1wCVJhDUgccfT0QHaEK?w=850&h=478&rs=1&pid=ImgDetMain')
-            no-repeat center center fixed;
+    no-repeat center center fixed;
             background-size: cover;
             color: #333;
             display: flex;
@@ -23,6 +28,22 @@
             text-align: center;
             padding: 12px;
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+        }
+        .header-container h1 {
+            font-size: 1.5em;
+            margin-bottom: 10px;
+            font-weight: bold;
+            letter-spacing: 2px;
+        }
+        .header-container p {
+            font-size: 1.2em;
+            font-weight: 300;
+            margin-top: 10px;
+        }
+        .content {
+            flex-grow: 1;
+            padding: 100px 20px 60px;
+            text-align: center;
         }
         .container {
             margin-top: 20px;
@@ -39,6 +60,9 @@
             width: 100%;
             background: white;
         }
+        .filter-form button:hover {
+            background: #2980b9;
+        }
         footer {
             background-color: rgba(52, 73, 94, 0.9);
             color: white;
@@ -46,93 +70,95 @@
             padding: 20px 0;
             box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.1);
         }
+        footer p {
+            margin: 0;
+        }
+        .marquee {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            background: #000;
+            color: #fff;
+            font-size: 18px;
+            overflow: hidden;
+            white-space: nowrap;
+            box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+        }
+        .marquee span {
+            display: inline-block;
+            padding-left: 100%;
+            animation: scrollText 20s linear infinite;
+        }
+        @keyframes scrollText {
+            0% {
+                transform: translateX(10%);
+            }
+            100% {
+                transform: translateX(-100%);
+            }
+        }
     </style>
 </head>
 <body>
     <header>
-        <h1>Trường Đại Học Nông Lâm TP HCM</h1>
-        <p>Khoa Cơ Khí - Công Nghệ</p>
-    </header>
-
-    <div class="container">
-        <div class="filter-form">
-            <h5>Khoảng thời gian</h5>
-            <label for="from_time" class="form-label">TỪ:</label>
-            <input type="datetime-local" id="from_time" class="form-control">
-            <label for="to_time" class="form-label mt-2">ĐẾN:</label>
-            <input type="datetime-local" id="to_time" class="form-control">
-            <div class="text-center mt-3">
-                <button class="btn btn-primary" onclick="filterData()">CHỌN LỌC</button>
-                <button class="btn btn-secondary" onclick="clearFilter()">XÓA LỌC</button>
-                <button class="btn btn-success" onclick="exportToText()">XUẤT TXT</button>
-                <button class="btn btn-info" onclick="exportToExcel()">XUẤT EXCEL</button>
-            </div>
+        <div class="header-container">
+            <h1>Truong Dai Hoc Nong Lam TP HCM</h1>
+            <p>Khoa Co Khi - Cong Nghe</p>
         </div>
-        <div class="table-responsive">
-            <table class="table table-bordered" id="data_table">
-                <thead>
-                    <tr>
-                        <th>Thời gian</th>
-                        <th>Giá trị</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr><td colspan="2" class="text-center">Không có dữ liệu</td></tr>
-                </tbody>
-            </table>
+    </header>
+   <div class="container">
+        <div class="row">
+            <div class="col-md-12" id="filter-section"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-12" id="table-section"></div>
         </div>
     </div>
-
     <script>
-        function filterData() {
-            const fromTime = document.getElementById("from_time").value;
-            const toTime = document.getElementById("to_time").value;
-            const url = `hi.php?from_time=${fromTime}&to_time=${toTime}`;
-            fetch(url)
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById("data_table").innerHTML = data;
-                })
-                .catch(error => console.error("Error fetching data:", error));
+        function createFilterSection() {
+            return `
+                <div class="filter-form">
+                    <h5>Khoang thoi gian</h5>
+                    <label for="from_time" class="form-label">TU:</label>
+                    <input type="datetime-local" id="from_time" class="form-control">
+                    <label for="to_time" class="form-label mt-2">DEN:</label>
+                    <input type="datetime-local" id="to_time" class="form-control">
+                    <div class="text-center mt-3">
+                        <button class="btn btn-primary" onclick="filterData()">CHON LOC</button>
+                        <button class="btn btn-secondary" onclick="clearFilter()">XOA LOC</button>
+                        <button class="btn btn-success" onclick="exportToText()">XUAT TXT</button>
+                        <button class="btn btn-info" onclick="exportToExcel()">XUAT EXCEL</button>
+                    </div>
+                </div>
+            `;
         }
-
-        function clearFilter() {
-            document.getElementById("from_time").value = '';
-            document.getElementById("to_time").value = '';
-            fetch('hi.php')
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById("data_table").innerHTML = data;
-                })
-                .catch(error => console.error("Error loading data:", error));
+        function createTableSection() {
+            return `
+                <div>
+                    <h5 class="text-center">Du lieu</h5>
+                    <div class="table-responsive">
+                        <table class="table table-bordered" id="table">
+                            <thead>
+                                <tr>
+                                    <th>Thoi gian</th>
+                                    <th>Gia tri</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr><td colspan="2" class="text-center">Khong co du lieu</td></tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            `;
         }
-
-        function exportToText() {
-            let table = document.getElementById("data_table");
-            let text = "";
-            for (let row of table.rows) {
-                text += [...row.cells].map(cell => cell.innerText).join("\t") + "\n";
-            }
-            let blob = new Blob([text], { type: "text/plain" });
-            let link = document.createElement("a");
-            link.href = URL.createObjectURL(blob);
-            link.download = "data.txt";
-            link.click();
-        }
-
-        function exportToExcel() {
-            let table = document.getElementById("data_table");
-            let wb = XLSX.utils.book_new();
-            let ws = XLSX.utils.table_to_sheet(table);
-            XLSX.utils.book_append_sheet(wb, ws, "Sheet1");
-            XLSX.writeFile(wb, "data.xlsx");
-        }
+        document.getElementById('filter-section').innerHTML = createFilterSection();
+        document.getElementById('table-section').innerHTML = createTableSection();
     </script>
-
     <footer>
-        <p>&copy; 2025 Hệ Thống Chăm Sóc Dưa Lưới Trong Nhà Màng Sử Dụng Xử Lý Ảnh</p>
-        <p>DH21TD - Đề Tài 2</p>
-        <a href="index.html" class="btn btn-primary">Quay lại Trang Chủ</a>
+        <p>&copy; 2025 He Thong Cham Soc Dua Luoi Trong Nha Mang Su Dung Xu Ly Anh</p>
+        <p>DH21TD - De Tai 2</p>
+        <a href="index.html" class="back-button">Quay lai Trang Chu</a>
     </footer>
 </body>
 </html>
