--- a/xla.html
+++ b/xla.html
@@ -45,7 +45,7 @@
         main {
             display: flex;
             flex-direction: row;
-            justify-content: center;
+            justify-content: right;
             align-items: flex-start;
             gap: 30px;
             padding: 40px;
