--- a/hienthi.html
+++ b/hienthi.html
@@ -352,12 +352,14 @@ function toggleMenu(side) {
 <div class="marquee">
    <span> <i class="fas fa-home"></i> Giang Vien Huong dan: Th/s Cao Đuc Loi  __ <i class="fa fa-user"></i> Truong Van Nguyen 21138151 __ <i class="fa fa-user"></i> Nguyen Ngoc Tan 21138174</span>
 </div>
+     <footer>
+        <p>&copy; 2025 Hệ Thống Chăm Sóc Dưa Lưới Trong Nhà Màng Sử Dụng Xử Lý Ảnh</p>
+        <p>DH21TD - Đề Tài 2</p>
+        <a href="index.html" class="back-button">Quay Lại Trang Chủ</a>
+          <p><i class="fas fa-school"></i></p>
+    </footer>
 
-<footer>
-    <p>&copy; 2025 He Thong Cham Soc Dua Luoi Trong Nha Mang Su Dung Xu Ly Anh</p>
-    <p>DH21TD - Đe Tai 2</p>
-    <p><i class="fas fa-school"></i></p>
-</footer>
+
 
 </body>
 </html>  
