--- a/truycap.html
+++ b/truycap.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Truy Cập Thông Tin</title>
+    <title>Truy Cap Thong Tin</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.4/xlsx.full.min.js"></script>
     <style>
@@ -57,17 +57,16 @@
             transform: scale(1.02);
         }
        footer {
-    background: #2c3e50;
-    color: white;
-    text-align: center;
-    padding: 20px 0;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.2);
-    font-size: 14px;
-}
-
+            background: #2c3e50;
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.2);
+            font-size: 14px;
+        }
         .back-button {
             display: inline-block;
             margin-top: 10px;
@@ -88,8 +87,8 @@
 </head>
 <body>
     <header>
-        <h1>Trường Đại Học Nông Lâm TP HCM</h1>
-        <p>Khoa Cơ Khí - Công Nghệ</p>
+        <h1>Truong Dai Hoc Nong Lam TP HCM</h1>
+        <p>Khoa Co Khi - Cong Nghe</p>
     </header>
    <div class="container">
         <div class="row">
@@ -109,7 +108,7 @@
                 .then(data => {
                     document.getElementById("table-section").innerHTML = data;
                 })
-                .catch(error => console.error("Error fetching data:", error));
+                .catch(error => console.error("Loi tai du lieu", error));
         }
         
         function clearFilter() {
@@ -120,7 +119,7 @@
                 .then(data => {
                     document.getElementById("table-section").innerHTML = data;
                 })
-                .catch(error => console.error("Error loading data:", error));
+                .catch(error => console.error("Loi tai du lieu", error));
         }
 
         function exportToText() {
@@ -147,16 +146,16 @@
         function createFilterSection() {
             return `
                 <div class="filter-form">
-                    <h5>Khoảng Thời Gian</h5>
-                    <label for="from_time" class="form-label">Từ:</label>
+                    <h5>Khoang Thoi Gian</h5>
+                    <label for="from_time" class="form-label">Tu</label>
                     <input type="datetime-local" id="from_time" class="form-control">
-                    <label for="to_time" class="form-label mt-2">Đến:</label>
+                    <label for="to_time" class="form-label mt-2">Den</label>
                     <input type="datetime-local" id="to_time" class="form-control">
                     <div class="text-center mt-3">
-                        <button class="btn btn-primary" onclick="filterData()">Chọn Lọc</button>
-                        <button class="btn btn-secondary" onclick="clearFilter()">Xóa Lọc</button>
-                        <button class="btn btn-success" onclick="exportToText()">Xuất TXT</button>
-                        <button class="btn btn-info" onclick="exportToExcel()">Xuất Excel</button>
+                        <button class="btn btn-primary" onclick="filterData()">Chon Loc</button>
+                        <button class="btn btn-secondary" onclick="clearFilter()">Xoa Loc</button>
+                        <button class="btn btn-success" onclick="exportToText()">Xuat TXT</button>
+                        <button class="btn btn-info" onclick="exportToExcel()">Xuat Excel</button>
                     </div>
                 </div>
             `;
@@ -165,9 +164,9 @@
         document.getElementById('filter-section').innerHTML = createFilterSection();
     </script>
     <footer>
-        <p>&copy; 2025 Hệ Thống Chăm Sóc Dưa Lưới Trong Nhà Màng Sử Dụng Xử Lý Ảnh</p>
-        <p>DH21TD - Đề Tài 2</p>
-        <a href="index.html" class="back-button">Quay Lại Trang Chủ</a>
+        <p>&copy; 2025 He Thong Cham Soc Dua Luoi Trong Nha Mang Su Dung Xu Ly Anh</p>
+        <p>DH21TD - De Tai 2</p>
+        <a href="index.html" class="back-button">Quay Lai Trang Chu</a>
     </footer>
 </body>
 </html>
