--- a/control.html
+++ b/control.html
@@ -13,7 +13,7 @@
         html, body {
             height: 100%;
             font-family: 'Poppins', sans-serif;
-            background: url('https://cdn.tapus.vn/storage/product-categories/co-cau-ggp.jpg')
+            background: url('https://congcutot.vn/uploads/store/page/article/2023/11/ro-bot-thu-hoach-trong-nong-nghiep-tu-dong-nam-2023.jpg')
             color: white;
             display: flex;
             flex-direction: column;
