--- a/control.html
+++ b/control.html
@@ -13,7 +13,7 @@
         html, body {
             height: 100%;
             font-family: 'Poppins', sans-serif;
-            background: url('https://congcutot.vn/uploads/store/page/article/2023/11/ro-bot-thu-hoach-trong-nong-nghiep-tu-dong-nam-2023.jpg')
+            background: linear-gradient(135deg, #004d40, #00796b);
             color: white;
             display: flex;
             flex-direction: column;
