--- a/control.html
+++ b/control.html
@@ -98,5 +98,12 @@
             }
         };
     </script>
+    <footer>
+        <p>&copy; 2025 Hệ Thống Chăm Sóc Dưa Lưới Trong Nhà Màng Sử Dụng Xử Lý Ảnh</p>
+        <p>DH21TD - Đề Tài 2</p>
+        <a href="index.html" class="back-button">Quay Lại Trang Chủ</a>
+          <p><i class="fas fa-school"></i></p>
+    </footer>
+
 </body>
 </html>
