--- a/control.html
+++ b/control.html
@@ -65,6 +65,17 @@
             display: block;
             margin-top: 20px;
         }
+        footer {
+            background: #2c3e50;
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.2);
+            font-size: 14px;
+        }
     </style>
 </head>
 <body>
