--- a/xla.html
+++ b/xla.html
@@ -275,6 +275,7 @@
 <footer>
     <p>&copy; 2025 He Thong Cham Soc Dua Luoi Trong Nha Mang Su Dung Xu Ly Anh</p>
     <p>DH21TD - Đe Tai 2</p>
+    <a href="index.html" class="back-button">Quay Lại Trang Chủ</a>
     <p><i class="fas fa-school"></i></p>
 </footer>
 
