--- a/control.html
+++ b/control.html
@@ -78,6 +78,12 @@
         }
     </style>
 </head>
+    <header>
+    <div class="header-container">
+        <h1>Truong Dai Hoc Nong Lam TP HCM</h1>
+        <p>Khoa Co Khi- Cong Nghe</p>
+    </div>
+</header>
 <body>
     <div class="motor-control">
         <h1>🌱 Giám Sát & Điều Khiển Động Cơ</h1>
