--- a/control.html
+++ b/control.html
@@ -65,6 +65,13 @@
             display: block;
             margin-top: 20px;
         }
+        header {
+            background-color: rgba(52, 152, 219, 0.9);
+            color: white;
+            text-align: center;
+            padding: 12px;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+        }
         footer {
             background: #2c3e50;
             color: white;
