--- a/control.html
+++ b/control.html
@@ -13,7 +13,7 @@
         html, body {
             height: 100%;
             font-family: 'Poppins', sans-serif;
-            background: linear-gradient(135deg, #004d40, #00796b);
+            background: #f5f5dc;
             color: white;
             display: flex;
             flex-direction: column;
