--- a/control.html
+++ b/control.html
@@ -9,97 +9,103 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-        }
-        html, body {
-            height: 100%;
             font-family: 'Poppins', sans-serif;
-            background: linear-gradient(135deg, #004d40, #00796b);
+        }
+        body {
+            background: linear-gradient(135deg, #2c3e50, #34495e);
             color: white;
+            text-align: center;
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            text-align: center;
+            min-height: 100vh;
             padding: 20px;
         }
-        .khung-dieu-khien {
-            background: rgba(255, 255, 255, 0.15);
-            padding: 40px;
-            border-radius: 20px;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-            width: 600px;
-            backdrop-filter: blur(12px);
-        }
-        button {
-            background: #4caf50;
-            color: white;
-            font-size: 22px;
-            padding: 15px 25px;
-            border: none;
-            border-radius: 10px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            margin: 12px;
-            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-        }
-        button:hover {
-            background: #388e3c;
-            transform: scale(1.1);
-        }
-        .thanh-keo {
-            -webkit-appearance: none;
+        header {
             width: 100%;
-            height: 15px;
-            background: linear-gradient(to right, #ff9800, #f44336);
-            border-radius: 10px;
-            outline: none;
-            transition: 0.3s;
-            box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
-        }
-        .thanh-keo:hover {
-            transform: scale(1.05);
-        }
-        .thanh-keo::-webkit-slider-thumb {
-            -webkit-appearance: none;
-            width: 25px;
-            height: 25px;
-            background: #ffffff;
-            border-radius: 50%;
-            cursor: pointer;
+            background: #2980b9;
+            padding: 20px 0;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
         }
-        .info {
-            margin-top: 25px;
-            font-size: 22px;
-            font-weight: bold;
-            color: #ffeb3b;
+        .container {
+            background: rgba(255, 255, 255, 0.1);
+            padding: 30px;
+            border-radius: 15px;
+            width: 90%;
+            max-width: 500px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+            backdrop-filter: blur(10px);
         }
         h1 {
-            font-size: 32px;
-            margin-bottom: 25px;
+            font-size: 28px;
+            margin-bottom: 20px;
         }
-        label {
-            font-size: 20px;
-            display: block;
+        .button-group {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 10px;
             margin-top: 20px;
         }
-        header {
-            background-color: rgba(52, 152, 219, 0.9);
+        button {
+            background: #27ae60;
             color: white;
-            text-align: center;
-            padding: 12px;
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+            font-size: 18px;
+            padding: 12px 20px;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: 0.3s;
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+        }
+        button:hover {
+            background: #219150;
+            transform: scale(1.1);
+        }
+        .slider-container {
+            margin-top: 20px;
+        }
+        label {
+            display: block;
+            margin-bottom: 5px;
+            font-size: 18px;
+        }
+        input[type="range"] {
+            width: 100%;
+            appearance: none;
+            height: 10px;
+            background: #ecf0f1;
+            border-radius: 5px;
+            outline: none;
+            transition: 0.2s;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+        }
+        input[type="range"]::-webkit-slider-thumb {
+            appearance: none;
+            width: 20px;
+            height: 20px;
+            background: #f1c40f;
+            border-radius: 50%;
+            cursor: pointer;
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+            transition: 0.3s;
+        }
+        input[type="range"]::-webkit-slider-thumb:hover {
+            transform: scale(1.2);
+        }
+        .info {
+            margin-top: 15px;
+            font-size: 20px;
+            font-weight: bold;
+            color: #f1c40f;
         }
         footer {
-            background: #2c3e50;
-            color: white;
-            text-align: center;
-            padding: 20px 0;
-            position: absolute;
-            bottom: 0;
             width: 100%;
-            box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.2);
+            background: #2c3e50;
+            padding: 15px 0;
+            margin-top: auto;
             font-size: 14px;
+            color: white;
         }
     </style>
 </head>
@@ -109,41 +115,41 @@
         <p>Khoa Co Khi - Cong Nghe</p>
     </header>
 
-    <div class="khung-dieu-khien">
+    <div class="container">
         <h1>🌱 Giam Sat & Dieu Khien Dong Co</h1>
-        <button onclick="guiLenh('thuan')">🔄 Quay Thuan</button>
-        <button onclick="guiLenh('nghich')">↩️ Quay Nghich</button>
-        <button onclick="guiLenh('batdau')">▶️ Bat Dau</button>
-        <button onclick="guiLenh('dung')">⏹ Dung</button>
-        <label for="tocdo">⚡ Toc do (RPM): <span id="giatriTocDo">50</span></label>
-        <input type="range" id="tocdo" class="thanh-keo" min="10" max="200" value="50" oninput="capNhatTocDo(this.value)">
-        <div class="info">Toc do hien tai: <span id="tocDoHienTai">0</span> RPM</div>
+        <div class="button-group">
+            <button onclick="sendCommand('cw')">🔄 Quay Thuan</button>
+            <button onclick="sendCommand('ccw')">↩️ Quay Nghich</button>
+            <button onclick="sendCommand('start')">▶️ Bat Dau</button>
+            <button onclick="sendCommand('stop')">⏹ Dung</button>
+        </div>
+        <div class="slider-container">
+            <label for="speed">⚡ Toc do (RPM): <span id="speedValue">50</span></label>
+            <input type="range" id="speed" min="10" max="200" value="50" oninput="updateSpeed(this.value)">
+        </div>
+        <div class="info">Toc do hien tai: <span id="currentSpeed">0</span> RPM</div>
     </div>
 
     <script>
-        const ws = new WebSocket("ws://raspberrypi:8765"); // Cap nhat dia chi Raspberry Pi neu can
-
-        function guiLenh(lenh) {
-            ws.send(JSON.stringify({ lenh: lenh }));
+        const ws = new WebSocket("ws://raspberrypi:8765");
+        function sendCommand(command) {
+            ws.send(JSON.stringify({ command: command }));
         }
-
-        function capNhatTocDo(value) {
-            document.getElementById("giatriTocDo").textContent = value;
-            ws.send(JSON.stringify({ lenh: "tocdo", giatri: value }));
+        function updateSpeed(value) {
+            document.getElementById("speedValue").textContent = value;
+            ws.send(JSON.stringify({ command: "speed", value: value }));
         }
-
         ws.onmessage = function(event) {
             const data = JSON.parse(event.data);
-            if (data.tocdo) {
-                document.getElementById("tocDoHienTai").textContent = data.tocdo;
+            if (data.speed) {
+                document.getElementById("currentSpeed").textContent = data.speed;
             }
         };
     </script>
 
     <footer>
-        <p>&copy; 2025 He Thong Cham Soc Dua Luoi Trong Nha Mang Su Dung Xu Ly Anh</p>
+        <p>&copy; 2025 He Thong Cham Soc Dua Luoi Trong Nha Mang</p>
         <p>DH21TD - De Tai 2</p>
-        <a href="index.html" class="nut-quay-lai">Quay Lai Trang Chu</a>
     </footer>
 </body>
 </html>
