--- a/control.html
+++ b/control.html
@@ -150,6 +150,7 @@
     <footer>
         <p>&copy; 2025 He Thong Cham Soc Dua Luoi Trong Nha Mang</p>
         <p>DH21TD - De Tai 2</p>
+         <a href="index.html" class="back-button">Quay Lại Trang Chủ</a>
     </footer>
 </body>
 </html>
