--- a/control.html
+++ b/control.html
@@ -99,6 +99,19 @@
             font-weight: bold;
             color: #f1c40f;
         }
+        footer .back-button {
+            display: inline-block;
+            margin-top: 5px;
+            padding: 10px 20px;
+            font-size: 1em;
+            color: white;
+            background-color: #2980b9;
+            border: none;
+            border-radius: 8px;
+            text-decoration: none;
+            cursor: pointer;
+            transition: all 0.3s ease-in-out;
+        }
         footer {
             width: 100%;
             background: #2c3e50;
