--- a/control.html
+++ b/control.html
@@ -129,7 +129,7 @@
     </header>
 
     <div class="container">
-        <h1>🌱 Giam Sat & Dieu Khien Dong Co</h1>
+        <h1>🌱 Dieu Khien Dong Co</h1>
         <div class="button-group">
             <button onclick="sendCommand('cw')">🔄 Quay Thuan</button>
             <button onclick="sendCommand('ccw')">↩️ Quay Nghich</button>
