--- a/control.html
+++ b/control.html
@@ -132,7 +132,7 @@
 <body>
 
     <header>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/Logo_Dai_Hoc_Nong_Lam_TP_HCM.png" 
+        <img src="https://upload.wikimedia.org/wikipedia/vi/thumb/e/e1/Logo_HCMUAF.svg/500px-Logo_HCMUAF.svg.png" 
          alt="Logo Dai Hoc Nong Lam" class="logo">
         <h1>Truong Dai Hoc Nong Lam TP HCM</h1>
         <p>Khoa Co Khi - Cong Nghe</p>
