--- a/truycap.html
+++ b/truycap.html
@@ -56,6 +56,10 @@
         .data-section:hover {
             transform: scale(1.02);
         }
+        .logo {
+            width: 100px;
+            margin-bottom: 10px;
+        }
        footer {
             background: #2c3e50;
             color: white;
