--- a/truycap.html
+++ b/truycap.html
@@ -91,7 +91,7 @@
 </head>
 <body>
     <header>
-        
+        <img src="https://upload.wikimedia.org/wikipedia/vi/thumb/e/e1/Logo_HCMUAF.svg/500px-Logo_HCMUAF.svg.png" 
         <h1>Truong Dai Hoc Nong Lam TP HCM</h1>
         <p>Khoa Co Khi - Cong Nghe</p>
     </header>
