--- a/xla.html
+++ b/xla.html
@@ -285,6 +285,21 @@
 </footer>
 
     <script>
+        function captureImage() {
+    let video = document.getElementById('camera');
+    let canvas = document.getElementById('canvas');
+    let ctx = canvas.getContext('2d');
+
+    // Lấy kích thước video và vẽ lên canvas
+    canvas.width = video.videoWidth;
+    canvas.height = video.videoHeight;
+    ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+
+    // Hiển thị ảnh chụp ngay bên cạnh
+    let imgTag = document.getElementById('capturedImage');
+    imgTag.src = canvas.toDataURL('image/jpeg');
+}
+
         function startCamera() {
             navigator.mediaDevices.getUserMedia({ video: true })
                 .then(stream => {
