--- a/xla.html
+++ b/xla.html
@@ -249,6 +249,7 @@
         <video id="camera" autoplay></video>
         <button onclick="startCamera()">📷 Bật Camera</button>
         <button onclick="captureImage()">📸 Chụp Ảnh</button>
+        <button onclick="uploadImage()">🚀 Gửi Ảnh</button>
     </div>
     <div class="canvas-container">
         <canvas id="canvas" style="display: none;"></canvas>
