--- a/xla.html
+++ b/xla.html
@@ -340,17 +340,25 @@
                 });
         }
 
-        function loadImage(event) {
-            const canvas = document.getElementById('canvas');
-            const ctx = canvas.getContext('2d');
-            const img = new Image();
-            img.onload = () => {
-                canvas.width = img.width;
-                canvas.height = img.height;
-                ctx.drawImage(img, 0, 0);
-            };
-            img.src = URL.createObjectURL(event.target.files[0]);
-        }
+        function uploadImage() {
+    let canvas = document.getElementById('canvas');
+    canvas.toBlob((blob) => {
+        let formData = new FormData();
+        formData.append("image", blob, "capture.jpg");
+
+        fetch("http://127.0.0.1:5000/process_image", {
+            method: "POST",
+            body: formData
+        })
+        .then(response => response.json())
+        .then(data => {
+            let imgTag = document.getElementById('processedImage');
+            imgTag.src = "data:image/jpeg;base64," + data.processed_image;
+        })
+        .catch(error => console.error("Lỗi khi gửi ảnh:", error));
+    }, "image/jpeg");
+}
+
         function deleteImage() {
     const canvas = document.getElementById('canvas');
     const ctx = canvas.getContext('2d');
