--- a/truycap.html
+++ b/truycap.html
@@ -168,10 +168,15 @@
         
         document.getElementById('filter-section').innerHTML = createFilterSection();
     </script>
-    <footer>
-        <p>&copy; 2025 He Thong Cham Soc Dua Luoi Trong Nha Mang Su Dung Xu Ly Anh</p>
-        <p>DH21TD - De Tai 2</p>
-        <a href="index.html" class="back-button">Quay Lai Trang Chu</a>
-    </footer>
+    <div class="marquee">
+   <span> <i class="fas fa-home"></i> Giang Vien Huong dan: Th/s Cao Đuc Loi  __ <i class="fa fa-user"></i> Truong Van Nguyen 21138151 __ <i class="fa fa-user"></i> Nguyen Ngoc Tan 21138174</span>
+</div>
+
+<footer>
+    <p>&copy; 2025 He Thong Cham Soc Dua Luoi Trong Nha Mang Su Dung Xu Ly Anh</p>
+    <p>DH21TD - Đe Tai 2</p>
+    <a href="index.html" class="back-button">Quay Lại Trang Chủ</a>
+    <p><i class="fas fa-school"></i></p>
+</footer>
 </body>
 </html>
