--- a/truycap.html
+++ b/truycap.html
@@ -87,6 +87,23 @@
         .btn:hover {
             opacity: 0.8;
         }
+        .marquee {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            background: #000;
+            color: #fff;
+            font-size: 18px;
+            overflow: hidden;
+            white-space: nowrap;
+            box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .marquee span {
+            display: inline-block;
+            padding-left: 100%;
+            animation: scrollText 20s linear infinite;
+        }
     </style>
 </head>
 <body>
