--- a/truycap.html
+++ b/truycap.html
@@ -60,17 +60,29 @@
             width: 100px;
             margin-bottom: 10px;
         }
-       footer {
-            background: #2c3e50;
-            color: white;
-            text-align: center;
-            padding: 20px 0;
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.2);
-            font-size: 14px;
-        }
+      footer {
+        background-color: rgba(52, 73, 94, 0.9);
+        color: white;
+        text-align: center;
+        padding: 20px 0;
+        box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.1);
+    }
+    footer p {
+        margin: 0;
+        margin-bottom: 14px;
+    }
+    footer a {
+        text-decoration: none;
+        color: white;
+        font-size: 1rem;
+        background-color: #2980b9;
+        padding: 10px 20px;
+        border-radius: 8px;
+        transition: background-color 0.3s ease;
+    }
+    footer a:hover {
+        background-color: #1c5a86;
+    }
         .back-button {
             display: inline-block;
             margin-top: 10px;
