--- a/truycap.html
+++ b/truycap.html
@@ -61,43 +61,43 @@
             margin-bottom: 10px;
         }
       footer {
-    background-color: rgba(52, 73, 94, 0.95);
-    color: white;
-    text-align: center;
-    padding: 20px;
-    box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.2);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-}
-
-footer p {
-    margin: 5px 0;
-    font-size: 16px;
-}
-
-footer a.back-button {
-    text-decoration: none;
-    color: white;
-    font-size: 16px;
-    background-color: #2980b9;
-    padding: 10px 20px;
-    border-radius: 8px;
-    transition: background-color 0.3s ease;
-    display: inline-block;
-    margin-top: 10px;
-}
-
-footer a.back-button:hover {
-    background-color: #1c5a86;
-}
-
-footer .footer-icon {
-    font-size: 24px;
-    margin-top: 5px;
-    color: white;
-}
+            background-color: rgba(52, 73, 94, 0.9);
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+            box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.1);
+        }
+        footer p {
+            margin: 0;
+        }
+        footer a {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 10px 25px;
+            font-size: 1.1em;
+            color: white;
+            background-color: #2980b9;
+            border-radius: 8px;
+            text-decoration: none;
+            transition: background-color 0.3s, transform 0.3s;
+        }
+        
+        .marquee {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            background: #000;
+            color: #fff;
+            font-size: 18px;
+            overflow: hidden;
+            white-space: nowrap;
+            box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+        }
+        .marquee span {
+            display: inline-block;
+            padding-left: 100%;
+            animation: scrollText 20s linear infinite;
+        }
 
         .back-button {
             display: inline-block;
