--- a/truycap.html
+++ b/truycap.html
@@ -221,7 +221,7 @@
     <p>&copy; 2025 He Thong Cham Soc Dua Luoi Trong Nha Mang Su Dung Xu Ly Anh</p>
     <p>DH21TD - Đe Tai 2</p>
     <a href="index.html" class="back-button">Quay Lại Trang Chủ</a>
-    <p><i class="fas fa-school"></i></p>
+    <p><i class="fas fa-home"></i></p>
 </footer>
 </body>
 </html>
