--- a/truycap.html
+++ b/truycap.html
@@ -27,7 +27,7 @@
             background: linear-gradient(135deg, #3498db, #2980b9);
             color: white;
             text-align: center;
-            padding: 15px;
+            padding: 20px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
         .content {
@@ -45,35 +45,18 @@
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
             margin-bottom: 20px;
         }
-        .data-section {
-            background: rgba(255, 255, 255, 0.98);
-            padding: 25px;
-            border-radius: 15px;
-            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
-            margin-bottom: 30px;
-            transition: transform 0.3s ease-in-out;
-        }
-        .data-section:hover {
-            transform: scale(1.02);
-        }
-        .logo {
-            width: 100px;
-            margin-bottom: 10px;
-        }
-      footer {
-            background-color: rgba(52, 73, 94, 0.9);
+        footer {
+            background-color: rgba(52, 73, 94, 0.95);
             color: white;
             text-align: center;
-            padding: 20px 0;
-            box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.1);
-        }
-        footer p {
-            margin: 0;
+            padding: 15px 0;
+            box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.1);
+            position: relative;
         }
         footer a {
             display: inline-block;
             margin-top: 10px;
-            padding: 10px 25px;
+            padding: 10px 20px;
             font-size: 1.1em;
             color: white;
             background-color: #2980b9;
@@ -81,52 +64,17 @@
             text-decoration: none;
             transition: background-color 0.3s, transform 0.3s;
         }
-        
         .marquee {
             position: fixed;
-            bottom: 0;
+            bottom: 50px;
             width: 100%;
-            background: #000;
-            color: #fff;
-            font-size: 18px;
-            overflow: hidden;
-            white-space: nowrap;
-            box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
-        }
-        .marquee span {
-            display: inline-block;
-            padding-left: 100%;
-            animation: scrollText 20s linear infinite;
-        }
-
-        .back-button {
-            display: inline-block;
-            margin-top: 10px;
-            padding: 10px 20px;
-            background: #2980b9;
+            background: rgba(0, 0, 0, 0.8);
             color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            transition: 0.3s;
-        }
-        .back-button:hover {
-            background: #1a5276;
-        }
-        .btn:hover {
-            opacity: 0.8;
-        }
-        .marquee {
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            background: #000;
-            color: #fff;
             font-size: 18px;
-            overflow: hidden;
             white-space: nowrap;
             box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+            padding: 5px 0;
         }
-
         .marquee span {
             display: inline-block;
             padding-left: 100%;
