--- a/truycap.html
+++ b/truycap.html
@@ -66,20 +66,37 @@
         }
         .marquee {
             position: fixed;
-            bottom: 50px;
+            bottom: 0;
             width: 100%;
-            background: rgba(0, 0, 0, 0.8);
-            color: white;
+            background: #000;
+            color: #fff;
             font-size: 18px;
+            overflow: hidden;
             white-space: nowrap;
             box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
-            padding: 5px 0;
         }
+
         .marquee span {
             display: inline-block;
             padding-left: 100%;
             animation: scrollText 20s linear infinite;
         }
+
+        @keyframes scrollText {
+            0% {
+                transform: translateX(10%);
+            }
+
+            100% {
+                transform: translateX(-100%);
+            }
+        }
+        @media (max-width: 768px) {
+            main {
+                flex-direction: column;
+                gap: 20px;
+                padding: 20px;
+            }
     </style>
 </head>
 <body>
